--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -27,18 +27,18 @@
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <!-- TODO: Week 02 - replace [Your purpose here] with your purpose in creating the website. This is NOT the reason for the assignment in the class. It is the reason the site owner would want to make this website -->
-      <p>To advance the enrichment of Dallin Sprague, so that he can be very wealthy and spend his new monies.</p>
+      <p>My purpose is to advance the enrichment of Dallin Sprague, so that he can be very wealthy and spend his new monies.</p>
 
       <h3>Audience</h3>
       <!-- TODO: Week 02 - replace [Your audience here] with your audience. Who are they? What are their ages? What do they like to do? Why would they want to look at this website? You could even go as far as giving them names and bios-->
-      <p>My audience is everyone willing to donate to my charitable cause</p>
+      <p>My audience is everyone willing and able to donate to my supremely charitable cause</p>
 
       <hr />
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="images/dsefLogo.png"
+        src="https://github.com/DSprague12/Web-Design/blob/main/wwr/images/dsefLogo.png?raw=true"
         alt="Logo image"
       />
       <hr/>
@@ -72,11 +72,11 @@
 
       <h4>
         <!-- TODO: Week 02 - replace [Font Name here] with your chosen heading font -->
-        Heading Font: [Font Name here]
+        Heading Font: Delius
       </h4>
       <h4>
         <!-- TODO: Week 02 - replace [Font Name here] with your chosen paragraph font -->
-        Paragraph Font: [Font Name here]
+        Paragraph Font: Tuffy
       </h4>
       <h3>Normal paragraph example</h3>
       <p>
