--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -38,7 +38,7 @@
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="https://github.com/DSprague12/Web-Design/blob/main/wwr/images/dsefLogo.png?raw=true"
+        src="images/dsefLogo.png"
         alt="Logo image"
       />
       <hr/>
