HTML & CSS practice

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href = "ChurchLookingSite/index.html">ChurchSiteLookAlike</a>
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
+            <a href="W05Practice/index.html">thing1</a>
         </nav>
 
         <h1 class = 'Big Bold Name'>Dallin Sprague</h1>
