Dry oar site week 5

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -52,7 +52,7 @@
             <section class ="msg">
                 <h2>The Next Step</h2>
                 <p>You too can recieve the opportunity to give to the Dallin Enrichment Fund and make a difference!</p>
-                <a href = "give-money.html">Give</a>
+                <a class = "button" href = "give-money.html">Give</a>
             </section>
         </main>
         <footer>
