Site plan and our team practice

--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -17,17 +17,17 @@
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <!-- TODO: Week 07 - Fill in your purpose. In 2–3 sentences, write the purpose statement from your elevator pitch -->
-      <p>[Your purpose here]</p>
+      <p>How many people love to brag about their pets? Well I am one! I plan to make a website to showcase my cat. The purpose of it is to build my cat’s professional network and to showcase her work in the modeling industry.</p>
 
       <h3>Audience</h3>
       <!-- TODO: Week 07 - write about your intended audience. Who are they? How old are they? Why will they be using your site? What do you want them to do? -->
-      <p>[Your audience here]</p>
+      <p>Fellow pet owners</p>
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- TODO: Week 07 - Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/catlogo.png" alt="Logo image">
       <hr>
       <h2>Style Guide</h2>
 
@@ -57,11 +57,11 @@
 
       <h4>
         <!-- TODO: Week 07 - change this -->
-        Heading Font: [Font Name here]
+        Heading Font: Knewave
       </h4>
       <h4>
         <!-- TODO: Week 07 - change this -->
-        Paragraph Font: [Font Name here]
+        Paragraph Font: Caveat Brush
       </h4>
       <h3>Normal paragraph example</h3>
       <p>
