Wireframe and content for site-plan

--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -116,7 +116,25 @@
       <h3>Home page</h3>
       <p>
         <!-- TODO: Week 08 - change this -->
-        [Written copy for the home page here]
+         Welcome to My World!
+Hi! I'm Mila — your new favorite internet cat.
+I wasn’t always the pampered indoor queen you see today. I started my life as a feral kitten, roaming the wilds of rural Wyoming. Can you believe it? Out there among the sagebrush and coyotes, with nothing but my extra toes and pure determination to keep me going. Oh, did I forget to mention? I have six toes on each paw — that’s right, I’m what the humans call a polydactyl. I just call it fashion.
+Luckily, I was rescued by a loving family who gave me a warm home, lots of toys, and all the attention I so obviously deserve. Now, I rule my domain (a.k.a. the house) with elegance, energy, and just a little bit of chaos.
+
+A Few of My Favorite Things:
+My Family – My humans are my favorite, even when they tell me not to bite them (which I totally still do).
+Treats – If it crinkles, I’m coming.
+Hair Ties – Yes, your hair ties. I steal them. I stash them. I treasure them.
+Toys – Balls, strings, feathers, lasers… if it moves, it’s mine.
+Biting – It’s how I show love, okay?
+Bug Hunting – No pest survives in my kingdom.
+Sleeping – Preferably in a sunbeam or on top of laundry you just folded.
+
+
+Life Inside
+After my wild kitten days, I decided: outside? Not for me. I’ve seen enough of that dusty, windy wilderness. These days, I’m a full-time indoor cat, and let me tell you — climate control is fabulous. I have cozy hiding spots in the walls (don’t ask how I get in there), endless entertainment, and all the chin scritches a cat could want.
+But just because I stay inside doesn’t mean life is boring. I chase shadows, knock things off shelves, and occasionally dive-bomb the dog from the staircase. You know, the usual feline mischief.
+
       </p>
       <p>Images for the Home page</p>
       <img src="#" alt="image for homepage">
@@ -124,7 +142,15 @@
 
       <!-- TODO: Week 08 - change this -->
       <h3>[Page 2]</h3>
-      <p>[Written copy for the Page 2 here]</p>
+      <p>
+My Family
+I’m not an only child! I have a sister who is weirdly obsessed with playing fetch — like a dog. I’ve told her it’s not very dignified, but she insists. Then there are my two brothers. They still live the outdoor life, climbing trees, patrolling the yard, and coming home covered in leaves and adventure. We’re all different, but we’re all part of the same family.
+Speaking of the dog… yes, there is a dog in this household. He’s alright. Kind of clueless, a bit drooly, but mostly harmless. I like to bat at him through the bars of his kennel — it’s our little routine. He barks, I swipe, and then we both pretend we’re not enjoying the attention.
+
+A Day in the Life
+People always ask what I do all day — like I’m not booked and busy! My schedule is very full. I start my mornings with a dramatic stretch, followed by a gourmet breakfast (okay, it’s kibble, but I act like it’s filet mignon). Then I patrol the house, making sure everything smells like me, and maybe sneak in a surprise pounce or two. Afternoons are for napping — often in weird positions that make my humans laugh. Evenings are when I come alive! That’s when the zoomies hit, and I sprint from room to room like I’m training for the Cat Olympics. After all that, I curl up with my family, purr like a tiny motorboat, and demand cuddles — on my terms, of course.
+
+      </p>
       <p>Images for the Page 2</p>
       <img src="#" alt="image for page">
       <img src="#" alt="image for page">
@@ -132,8 +158,16 @@
       <!-- TODO: Week 08 - change this -->
       <h3>[Page 3]</h3>
       <p>
-        <!-- TODO: Week 08 - change this -->
-        [Written copy for the Page 3 here]
+Picture Perfect
+Curious to see more of me? Of course you are. Click here to see my photo gallery! I’ve hand-selected (paw-selected?) some of my best moments — from my kitten days with big ears and bigger attitude, to my holiday looks (yes, I dressed up… but only for the treats).
+
+Why a Cat Website?
+Let’s be real — everyone wants to talk about their pets. But having a whole website dedicated to me? That’s next-level commitment. Now, whenever someone says, “Show me a picture of your cat,” my humans can just send them here. One URL. Endless cuteness.
+So go ahead, scroll around, admire my fluff, and maybe send this site to a fellow cat lover. Because life’s too short not to enjoy a little feline fabulousness.
+Thanks for visiting my corner of the internet!
+-Mila
+Queen of the Hair Ties, Bug Slayer, Treat Connoisseur
+
       </p>
       <p>Images for the Page 3</p>
       <img src="#" alt="image for page3">
