--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang = "en">
 
     <head>
-        <meta charset="UTF-8" />
-        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0" />
+        <meta charset="UTF-8">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
         <title>WDD130 | Home</title>
-        <link rel = "stylesheet" href="styles.css" />
+        <link rel = "stylesheet" href="styles.css">
         <script src = "script.js" defer></script>
     </head>
 
@@ -17,7 +17,7 @@
             <a href="positioning.html">Positioning Activity</a>
             <a href = "ChurchLookingSite/index.html">ChurchSiteLookAlike</a>
             <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
+            <a href="finalproject/site-plan.html">Personal Siteplan</a>
             <a href="W06Ice/index.html">thing1</a>
         </nav>
 
