--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,14 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Site Plan</title>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="styles/site-plan-rafting.css"
-    />
+    <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
   </head>
 
   <body>
@@ -37,11 +32,8 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img
-        src="images/dsefLogo.png"
-        alt="Logo image"
-      />
-      <hr/>
+      <img src="images/dsefLogo.png" alt="Logo image">
+      <hr>
       <h2>Style Guide</h2>
 
       <!-- ------------------------Steps 6-9------------------------------ -->
@@ -108,7 +100,7 @@
         <div class="sm-home">Home</div>
         <div class="sm-page2">
           <!-- TODO: Week 8 replace [Page 2] with your chosen subpage title -->
-          [Page2]
+          Donate
         </div>
         <div class="sm-page3">Contact Us</div>
 
