--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -137,8 +137,8 @@ But just because I stay inside doesn’t mean life is boring. I chase shadows, k
 
       </p>
       <p>Images for the Home page</p>
-      <img src="#" alt="image for homepage">
-      <img src="#" alt="image for homepage">
+      <img src="images/gallery/IMG_20230218_113654.jpg" alt="image for homepage">
+      <img src="images/gallery/IMG_20220828_142823.jpg" alt="image for homepage">
 
       <!-- TODO: Week 08 - change this -->
       <h3>[Page 2]</h3>
@@ -152,8 +152,8 @@ People always ask what I do all day — like I’m not booked and busy! My sched
 
       </p>
       <p>Images for the Page 2</p>
-      <img src="#" alt="image for page">
-      <img src="#" alt="image for page">
+      <img src="images/gallery/IMG_20220630_211714.jpg" alt="image for page">
+      <img src="images/gallery/IMG_20220628_215701.jpg" alt="image for page">
 
       <!-- TODO: Week 08 - change this -->
       <h3>[Page 3]</h3>
@@ -170,8 +170,8 @@ Queen of the Hair Ties, Bug Slayer, Treat Connoisseur
 
       </p>
       <p>Images for the Page 3</p>
-      <img src="#" alt="image for page3">
-      <img src="#" alt="image for page3">
+      <img src="images/gallery/IMG_20220131_161920.jpg" alt="image for page3">
+      <img src="images/gallery/IMG_20231224_144655.jpg" alt="image for page3">
 
       <hr>
       <h2>Wireframes</h2>
