--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -159,7 +159,7 @@ People always ask what I do all day — like I’m not booked and busy! My sched
       <h3>[Page 3]</h3>
       <p>
 Picture Perfect
-Curious to see more of me? Of course you are. Click here to see my photo gallery! I’ve hand-selected (paw-selected?) some of my best moments — from my kitten days with big ears and bigger attitude, to my holiday looks (yes, I dressed up… but only for the treats).
+Curious to see more of me? Of course you are. Look here my photo gallery! I’ve hand-selected (paw-selected?) some of my best moments — from my kitten days with big ears and bigger attitude, to my holiday looks (yes, I dressed up… but only for the treats).
 
 Why a Cat Website?
 Let’s be real — everyone wants to talk about their pets. But having a whole website dedicated to me? That’s next-level commitment. Now, whenever someone says, “Show me a picture of your cat,” my humans can just send them here. One URL. Endless cuteness.
