added images to site lol :0

--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -179,6 +179,9 @@ Queen of the Hair Ties, Bug Slayer, Treat Connoisseur
         Create three wireframes for your site. One for each page and list them
         here
       </p>
+      <img src="siteplanpg1.jpg" alt ="site plan1">
+      <img src="siteplanpg2.jpg" alt ="site plan2">
+      <img src="siteplanpg3.jpg" alt ="site plan3">
 
       <h3>Home</h3>
       <p>
