--- a/wwr/give-money.html
+++ b/wwr/give-money.html
@@ -13,9 +13,9 @@
         </a>
         <nav>
             <a href = "index.html">Home</a>
-            <a href = "#">Page 2</a>
             <a href = "site-plan-rafting.html">Site Plan</a>
             <a href = "give-money.html">Give</a>
+            <a href = "contactus.html">Contact Us</a>
         </nav>
     </header>
 
@@ -23,7 +23,7 @@
     <img class = "basic-back" src="images/dude_with_serious_cash.jpg" alt="background pic">
     <div id="payment-block">
         <h2>Pay here</h2>
-        <img src="https://placehold.co/200" alt="qr code" id="qr-code">
+        <img src="images/venmo_qrcode.png" id="qr-code" alt ="qr-code">
     </div>
     <div id="space"></div>
     <div id = "bubbles">
