fixed broken link on og site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
             <a href = "ChurchLookingSite/index.html">ChurchSiteLookAlike</a>
-            <a href="#">Personal Website</a>
+            <a href="finalproject/index.html">Personal Website</a>
             <a href="finalproject/site-plan.html">Personal Siteplan</a>
             <a href="W06Ice/index.html">thing1</a>
         </nav>
