--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -24,7 +24,7 @@
     <main>
         <div>
             <h1>Welcome to My World!</h1>
-            <h2>Hi! I'm Mila — your new favorite internet cat.</h2>
+            <h2>Hi! I'm Mila - your new favorite internet cat.</h2>
             <p>
                 I wasn’t always the pampered indoor queen you see today. I started my life as a feral kitten, roaming the wilds of rural Wyoming. 
                 Can you believe it? Out there among the sagebrush and coyotes, with nothing but my extra toes and pure determination to keep me going. 
@@ -41,13 +41,13 @@
         <div>
             <h2>A Few of My Favorite Things:</h2>
             <ul>
-                <li>My Family – My humans are my favorite, even when they tell me not to bite them (which I totally still do).</li>
-                <li>Treats – If it crinkles, I’m coming.</li>
-                <li>Hair Ties – Yes, your hair ties. I steal them. I stash them. I treasure them.</li>
-                <li>Toys – Balls, strings, feathers, lasers… if it moves, it’s mine.</li>
-                <li>Biting – It’s how I show love, okay?</li>
-                <li>Bug Hunting – No pest survives in my kingdom.</li>
-                <li>Sleeping – Preferably in a sunbeam or on top of laundry you just folded.</li>
+                <li>My Family - My humans are my favorite, even when they tell me not to bite them (which I totally still do).</li>
+                <li>Treats - If it crinkles, I’m coming.</li>
+                <li>Hair Ties - Yes, your hair ties. I steal them. I stash them. I treasure them.</li>
+                <li>Toys - Balls, strings, feathers, lasers… if it moves, it’s mine.</li>
+                <li>Biting - It’s how I show love, okay?</li>
+                <li>Bug Hunting - No pest survives in my kingdom.</li>
+                <li>Sleeping - Preferably in a sunbeam or on top of laundry you just folded.</li>
             </ul>
         </div>
 
