added ids and classes

--- a/finalproject/myfam.html
+++ b/finalproject/myfam.html
@@ -21,7 +21,7 @@
     </header>
     
     <main>
-        <div>
+        <div id="papered">
             <h2>My Family</h2>
             <p>
                 I’m not an only child! I have a sister who is weirdly obsessed with playing fetch — like a dog. 
@@ -36,17 +36,42 @@
             </p>
         </div>
 
-        <div>
+        <div class = "bubbledSection">
             <h2>A Day in the Life</h2>
-            <p>
-                People always ask what I do all day like I’m not booked and busy! My schedule is very full. 
-                I start my mornings with a dramatic stretch, followed by a gourmet breakfast 
-                (okay, it’s kibble, but I act like it’s filet mignon). Then I patrol the house, making sure everything smells like me, 
-                and maybe sneak in a surprise pounce or two. Afternoons are for napping, often in weird positions that make my humans laugh. 
-                Evenings are when I come alive! That’s when the zoomies hit, and I sprint from room to room like 
-                I’m training for the Cat Olympics. After all that, I curl up with my family, purr like a tiny motorboat, 
-                and demand cuddles -on my terms, of course.
-            </p>
+            <div id="bubble1">
+                <p>
+                    People always ask what I do all day like I’m not booked and busy!
+                </p>
+            </div>
+            <div id="bubble2">
+                <p>
+                    I start my mornings with a dramatic stretch, followed by a gourmet breakfast 
+                    (okay, it’s kibble, but I act like it’s filet mignon).
+                </p>
+            </div>
+            <div id="bubble3">
+                <p>
+                    Then I patrol the house, making sure everything smells like me, 
+                    and maybe sneak in a surprise pounce or two.
+                </p>
+            </div>
+            <div id="bubble4">
+                <p>
+                    Afternoons are for napping, often in weird positions that make my humans laugh.
+                </p>
+            </div>
+            <div id="bubble5">
+                <p>
+                    Evenings are when I come alive! That’s when the zoomies hit, and I sprint from room to room like 
+                    I’m training for the Cat Olympics.
+                </p>
+            </div>
+            <div id="bubble6">
+                <p>
+                    After all that, I curl up with my family, purr like a tiny motorboat, 
+                    and demand cuddles -on my terms, of course.
+                </p>
+            </div>
         </div>
     </main>
 
