--- a/finalproject/pics.html
+++ b/finalproject/pics.html
@@ -20,8 +20,11 @@
     </header>
 
     <main>
-        <img src="https://placehold.co/400" alt ="cute cat">
-        <div>
+        <div class="pictureSection">
+            <img src="https://placehold.co/400" alt ="cute cat">
+        </div>
+
+        <div class = "coloredSection">
             <h2>Picture Perfect</h2>
             <p>
                 Curious to see more of me? Of course you are. Look here my photo gallery! I’ve hand-selected (paw-selected?) 
@@ -29,7 +32,8 @@
                 (yes, I dressed up… but only for the treats).
             </p>
         </div>
-        <div>
+
+        <div id="collage">
             <img src="https://placehold.co/100" alt="cute cat">
             <img src="https://placehold.co/100" alt="cute cat">
             <img src="https://placehold.co/100" alt="cute cat">
@@ -47,7 +51,7 @@
             <img src="https://placehold.co/100" alt="cute cat">
         </div>
 
-        <div>
+        <div class = "coloredSection">
             <h2>Why a Cat Website?</h2>
             <p>
                 Let’s be real, everyone wants to talk about their pets. But having a whole website dedicated to me? 
