--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href = "index.html">
-            <img src="images/catlogo.png" alt="Cat Logo">
+            <img id="logo" src="images/catlogo.png" alt="Cat Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -18,11 +18,10 @@
             <a href="myfam.html">My Family</a>
             <a href="pics.html">My Pictures</a>
         </nav> 
-
     </header>
 
     <main>
-        <div>
+        <div class = "coloredSection">
             <h1>Welcome to My World!</h1>
             <h2>Hi! I'm Mila - your new favorite internet cat.</h2>
             <p>
@@ -38,7 +37,7 @@
             </p>
         </div>
 
-        <div>
+        <div id="listSection">
             <h2>A Few of My Favorite Things:</h2>
             <ul>
                 <li>My Family - My humans are my favorite, even when they tell me not to bite them (which I totally still do).</li>
@@ -51,7 +50,7 @@
             </ul>
         </div>
 
-        <div>
+        <div class="coloredSection">
             <h2>Life Inside</h2>
             <p>
                 After my wild kitten days, I decided: outside? Not for me. I’ve seen enough of that dusty, windy wilderness. 
