Big website changes, styled it up. One problem exists with the @media thing, ai couldn't find the problem lol. I'll figure it out layta

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -23,6 +23,7 @@
     <main>
         <div class = "coloredSection">
             <h1>Welcome to My World!</h1>
+            <img src="images/gallery/profCat.jpg" alt="amazing cat">
             <h2>Hi! I'm Mila - your new favorite internet cat.</h2>
             <p>
                 I wasn’t always the pampered indoor queen you see today. I started my life as a feral kitten, roaming the wilds of rural Wyoming. 
@@ -52,6 +53,7 @@
 
         <div class="coloredSection">
             <h2>Life Inside</h2>
+            <img src="images/gallery/layCat.jpg" alt="sleepy cat">
             <p>
                 After my wild kitten days, I decided: outside? Not for me. I’ve seen enough of that dusty, windy wilderness. 
                 These days, I’m a full-time indoor cat, and let me tell you, climate control is fabulous. 
@@ -63,10 +65,10 @@
     </main>
 
     <footer>
-        <a href="justkidding.html"><img src="images/fakebook.png" alt ="Facebook profile"></a>
-        <a href="justkidding.html"><img src="images/xcom.png" alt="Twitter/X"></a>
-        <a href="justkidding.html"><img src="images/insta.png" alt="Instagram"></a>
-        <h3>Copyright @ me</h3>
+        <a href="justkidding.html"><img class="icons" src="images/fakebook.png" alt ="Facebook profile"></a>
+        <a href="justkidding.html"><img class="icons" src="images/xcom.png" alt="Twitter/X"></a>
+        <a href="justkidding.html"><img class="icons" src="images/insta.png" alt="Instagram"></a>
+        <h3 id="footerText">Copyright @ me</h3>
     </footer>
 
 </body>
