--- a/finalproject/justkidding.html
+++ b/finalproject/justkidding.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href = "index.html">
-            <img src="images/catlogo.png" alt="Cat Logo">
+            <img id="logo" src="images/catlogo.png" alt="Cat Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -16,7 +16,6 @@
             <a href="myfam.html">My Family</a>
             <a href="pics.html">My Pictures</a>
         </nav> 
-
     </header>
 
     <main>
@@ -24,10 +23,10 @@
     </main>
 
     <footer>
-        <a href="justkidding.html"><img src="images/fakebook.png" alt ="Facebook profile"></a>
-        <a href="justkidding.html"><img src="images/xcom.png" alt="Twitter/X"></a>
-        <a href="justkidding.html"><img src="images/insta.png" alt="Instagram"></a>
-        <h3>Copyright @ me</h3>
+        <a href="justkidding.html"><img class="icons" src="images/fakebook.png" alt ="Facebook profile"></a>
+        <a href="justkidding.html"><img class="icons" src="images/xcom.png" alt="Twitter/X"></a>
+        <a href="justkidding.html"><img class="icons" src="images/insta.png" alt="Instagram"></a>
+        <h3 id="footerText">Copyright @ me</h3>
     </footer>
 </body>
 </html>
