--- a/finalproject/pics.html
+++ b/finalproject/pics.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href = "index.html">
-            <img src="images/catlogo.png" alt="Cat Logo">
+            <img id="logo" src="images/catlogo.png" alt="Cat Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -64,10 +64,10 @@
     </main>
 
     <footer>
-        <a href="justkidding.html"><img src="images/fakebook.png" alt ="Facebook profile"></a>
-        <a href="justkidding.html"><img src="images/xcom.png" alt="Twitter/X"></a>
-        <a href="justkidding.html"><img src="images/insta.png" alt="Instagram"></a>
-        <h3>Copyright @ me</h3>
+        <a href="justkidding.html"><img class="icons" src="images/fakebook.png" alt ="Facebook profile"></a>
+        <a href="justkidding.html"><img class="icons" src="images/xcom.png" alt="Twitter/X"></a>
+        <a href="justkidding.html"><img class="icons" src="images/insta.png" alt="Instagram"></a>
+        <h3 id="footerText">Copyright @ me</h3>
     </footer>
 </body>
 </html>
