--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -182,6 +182,7 @@ Queen of the Hair Ties, Bug Slayer, Treat Connoisseur
       <img src="siteplanpg1.jpg" alt ="site plan1">
       <img src="siteplanpg2.jpg" alt ="site plan2">
       <img src="siteplanpg3.jpg" alt ="site plan3">
+      <img src="siteplanpg4.jpg" alt ="site plan4">
 
       <h3>Home</h3>
       <p>
