--- a/finalproject/pics.html
+++ b/finalproject/pics.html
@@ -22,7 +22,7 @@
 
     <main>
         <div class="pictureSection">
-            <img src="https://placehold.co/400" alt ="cute cat">
+            <img src="images/gallery/catslc.png" alt ="cute cat">
         </div>
 
         <div class = "coloredSection">
@@ -54,16 +54,28 @@
                 <img src="images/gallery/snoozeCat.jpg" alt="cute cat">
             </div>
             
-            <a id="previous" onclick="modifySlide(-1)">Back</a>
-            <a id="next" onclick="modifySlide(1)">Forward</a>
+            <div id ="slideshowRef">
+                <a id="prev" onclick="modifySlide(-1)">&lt;&lt;&lt;</a>
 
-            <div id="dots">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+                <div id="dots">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+
+                <a id="next" onclick="modifySlide(1)">>>></a>
             </div>
         </div>
 
+        <div class="gallery">
+            <img src="images/gallery/crazyCat.jpg" alt="cute cat">
+            <img src="images/gallery/layCat.jpg" alt="cute cat">
+            <img src="images/gallery/profCat.jpg" alt="cute cat">
+            <img src="images/gallery/santaCat.jpg" alt="cute cat">
+            <img src="images/gallery/sisterCat.jpg" alt="cute cat">
+            <img src="images/gallery/snoozeCat.jpg" alt="cute cat">
+            <img src="images/gallery/catslc.png" alt = "cute cat">
+        </div>
         <div class = "coloredSection">
             <h2>Why a Cat Website?</h2>
             <p>
