--- a/finalproject/myfam.html
+++ b/finalproject/myfam.html
@@ -37,41 +37,42 @@
 
         <div class = "bubbledSection">
             <h2>A Day in the Life</h2>
-            <div id="bubble1">
+            <div class="bubble">
                 <p>
                     People always ask what I do all day like I’m not booked and busy!
                 </p>
             </div>
-            <div id="bubble2">
+            <div class="bubble">
                 <p>
                     I start my mornings with a dramatic stretch, followed by a gourmet breakfast 
                     (okay, it’s kibble, but I act like it’s filet mignon).
                 </p>
             </div>
-            <div id="bubble3">
+            <div class="bubble">
                 <p>
                     Then I patrol the house, making sure everything smells like me, 
                     and maybe sneak in a surprise pounce or two.
                 </p>
             </div>
-            <div id="bubble4">
+            <div class="bubble">
                 <p>
                     Afternoons are for napping, often in weird positions that make my humans laugh.
                 </p>
             </div>
-            <div id="bubble5">
+            <div class="bubble">
                 <p>
                     Evenings are when I come alive! That’s when the zoomies hit, and I sprint from room to room like 
                     I’m training for the Cat Olympics.
                 </p>
             </div>
-            <div id="bubble6">
+            <div class="bubble">
                 <p>
                     After all that, I curl up with my family, purr like a tiny motorboat, 
                     and demand cuddles -on my terms, of course.
                 </p>
             </div>
         </div>
+        <img src = "images/gallery/snoozeCat.jpg" alt="cute cat">
     </main>
 
     <footer>
