--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -52,15 +52,17 @@
         </div>
 
         <div class="coloredSection">
-            <h2>Life Inside</h2>
             <img src="images/gallery/layCat.jpg" alt="sleepy cat">
-            <p>
-                After my wild kitten days, I decided: outside? Not for me. I’ve seen enough of that dusty, windy wilderness. 
-                These days, I’m a full-time indoor cat, and let me tell you, climate control is fabulous. 
-                I have cozy hiding spots in the walls (don’t ask how I get in there), endless entertainment, 
-                and all the chin scritches a cat could want. But just because I stay inside doesn’t mean life is boring. 
-                I chase shadows, knock things off shelves, and occasionally dive-bomb the dog from the staircase. You know, the usual feline mischief.
-            </p>
+            <div>
+                <h2>Life Inside</h2>
+                <p>
+                    After my wild kitten days, I decided: outside? Not for me. I’ve seen enough of that dusty, windy wilderness. 
+                    These days, I’m a full-time indoor cat, and let me tell you, climate control is fabulous. 
+                    I have cozy hiding spots in the walls (don’t ask how I get in there), endless entertainment, 
+                    and all the chin scritches a cat could want. But just because I stay inside doesn’t mean life is boring. 
+                    I chase shadows, knock things off shelves, and occasionally dive-bomb the dog from the staircase. You know, the usual feline mischief.
+                </p>
+            </div>
         </div>
     </main>
 
