--- a/finalproject/pics.html
+++ b/finalproject/pics.html
@@ -58,9 +58,9 @@
                 <a id="prev" onclick="modifySlide(-1)">&lt;&lt;&lt;</a>
 
                 <div id="dots">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
+                    <img class="dot" src="images/but.png" alt="button">
+                    <img class="dot" src="images/but.png" alt="button">
+                    <img class="dot" src="images/but.png" alt="button">
                 </div>
 
                 <a id="next" onclick="modifySlide(1)">>>></a>
